<resources>
    <string name="app_name">Videoturismo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="VT">Videoturismo S.A de C.V</string>

    <string name="action_pop">Pop</string>
    <string name="action_rock">Rock</string>
    <string name="action_clasicas">Clasicas</string>
    <string name="action_regionales">Regionales</string>
    <string name="action_pelis">Peliculas</string>


    <string name="drawer_pop">Pop</string>
    <string name="drawer_rock">Rock</string>
    <string name="drawer_clasicas">Clasicas</string>
    <string name="drawer_regionales">Regionales</string>

    <string name="drawer_accion">Acción</string>
    <string name="drawer_comedia">Comedia</string>
    <string name="drawer_estrenos">Estrenos</string>
    <string name="drawer_familiar">Familiar</string>
    <string name="drawer_infantil">Infantil</string>
    <string name="drawer_seriesydocumentales">Documentales</string>
    <string name="drawer_drama">Drama</string>
    <string name="drawer_romanticas">Romanticas</string>


    <string name="pupupmessage">"Estas en el apartado de :"</string>

    <string name="mensage_wifi">Ingresa a la configuración para conectarte a la Red Wi-Fi de Entretenimiento</string>


    <string name="next">SIGUIENTE</string>
    <string name="skip">SALTAR</string>
    <string name="start">VAMOS!!!</string>


    <string name="slide_1_title">Hola!!</string>
    <string name="slide_1_desc">Bienvenido a tu aplicación de entretenimiento a bordo </string>

    <string name="slide_2_title">Disfruta De Nuestro Contenido </string>
    <string name="slide_2_desc">Entre documentales, series y películas</string>

    <string name="slide_3_title">Conectate</string>
    <string name="slide_3_desc">Conecta tu dispositivo a la red wifi Entretenimiento para comenzar a disfrutar de el contenido!!!!</string>

    <string name="slide_4_title">Navega Por Nuestro Catalogo</string>
    <string name="slide_4_desc">Solo da click en la esquina superior izquierda y navega por los generos que tenemos para ti!!!!!!</string>


    <string name="eslogan">No podemos acortar distancias, pero si podemos hacer su viaje más placentero </string>

</resources>
